dnl Process this file with autoconf to produce a configure script.
AC_INIT(nettop.c)

AC_ARG_WITH(slang-libraries,	[  --with-slang-libraries=DIR  Slang libs in DIR], SLANGLIBS="-L$withval", SLANGLIBS="")
AC_ARG_WITH(slang-includes,	[  --with-slang-includes=DIR   Slang includes in DIR], SLANGFLAGS="-I$withval", SLANGLIBS="")

LDFLAGS="$SLANGLIBS $LDFLAGS"

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
AC_CHECK_LIB(pcap, pcap_lookupdev, LIBS="$LIBS -lpcap",
	AC_MSG_ERROR(can't build without pcap))
AC_CHECK_LIB(pthread, pthread_exit, LIBS="$LIBS -lpthread",
	AC_MSG_ERROR(can't build without pthread))
AC_CHECK_LIB(slang, SLang_init_slang, LIBS="$LIBS -lslang",
	AC_MSG_ERROR(can't build without slang), "-lm")

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h sys/ioctl.h unistd.h netinet/in.h \
netinet/in_system.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_TYPE_SIGNAL

AC_SUBST(SLANGFLAGS)
AC_SUBST(SLANGLIBS)

AC_OUTPUT(Makefile)
